--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0146.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0146.html
@@ -1238,7 +1238,7 @@
         </span>
         <span id="w_214" class="ocr_word" title="bbox 1346 2239 1509 2297" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Ὁρᾷς,</ins>
+            <ins title="nlp 2.00">Ὁρᾷς,</ins>
           </span>
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1541 2256 1640 2297" lang="grc">
@@ -1656,7 +1656,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1838 3112 1886 3157" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ρ.</ins>
+            <ins title="nlp 2.00">ρ.</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1910 3113 2055 3156">
