--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0147.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0147.html
@@ -345,14 +345,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 1856 922 1951 981" lang="grc">
+        <span id="w_67_0" class="ocr_word" title="bbox 1856 922 1951 981">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δ)ὴ</ins>
+            <ins class="alt" title="nlp 2.00">(δ)ὴ</ins>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 1973 945 2006 970" lang="grc">
+        <span id="w_67_1" class="ocr_word" title="bbox 1856 922 1951 981">
           <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -374,7 +374,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 767 996 1047 1055" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τέθ)ραπται</ins>
+            <ins title="nlp 2.00">τέθ)ραπται</ins>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1099 997 1122 1039" lang="grc">
@@ -426,7 +426,7 @@
         </span>
         <span id="w_83" class="ocr_word" title="bbox 408 1071 589 1128" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δοῦλος</ins>
+            <ins title="nlp 2.00">(δοῦλος</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 620 1068 702 1127" lang="grc">
@@ -625,9 +625,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 714 1356 850 1398">
+        <span id="w_118_0" class="ocr_word" title="bbox 714 1356 850 1398">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_118_1" class="ocr_word" title="bbox 714 1356 850 1398">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 879 1353 962 1397">
@@ -660,11 +665,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(scil.</ins>
             <del title="nlp 0.90">(scil.</del>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1749 1354 1952 1409" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνωνα)</ins>
           </span>
         </span>
       </span>
@@ -1491,9 +1491,14 @@
             <ins title="nlp 2.00">πολ|λο (ῦ σ)ὺν</ins>
           </span>
         </span>
-        <span id="w_290" class="ocr_word" title="bbox 1531 2567 1803 2627" lang="grc">
+        <span id="w_290_0" class="ocr_word" title="bbox 1531 2567 1803 2627">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀ)ντιγόνῳ</ins>
+            <ins class="alt" title="nlp 2.00">(Ἀ)ντιγόνῶ</ins>
+          </span>
+        </span>
+        <span id="w_290_1" class="ocr_word" title="bbox 1531 2567 1803 2627">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_291" class="ocr_word" title="bbox 1847 2569 1918 2612" lang="grc">
@@ -1501,16 +1506,16 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1952 2570 1958 2626">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 226 2639 1961 2703">
-        <span id="w_293" class="ocr_word" title="bbox 226 2644 353 2703" lang="grc">
+        <span id="w_293_0" class="ocr_word" title="bbox 226 2644 353 2703">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἅ)μα</ins>
+            <ins class="alt" title="nlp 2.00">(ἅ)μα</ins>
+          </span>
+        </span>
+        <span id="w_293_1" class="ocr_word" title="bbox 226 2644 353 2703">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_294" class="ocr_word" title="bbox 385 2642 799 2702" lang="grc">
@@ -1548,11 +1553,6 @@
             <ins title="nlp 2.00">φιλό(σ)ο|φον</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1627 2657 1716 2696" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ᾐρημένον</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 226 2711 2014 2774">
         <span id="w_303" class="ocr_word" title="bbox 226 2719 343 2773" lang="grc">
@@ -1565,9 +1565,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 407 2714 490 2774" lang="grc">
+        <span id="w_305_0" class="ocr_word" title="bbox 407 2714 490 2774">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐ)ξ</ins>
+            <ins class="alt" title="nlp 2.00">(ἐ)ξ</ins>
+          </span>
+        </span>
+        <span id="w_305_1" class="ocr_word" title="bbox 407 2714 490 2774">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 522 2732 576 2759" lang="grc">
@@ -1580,14 +1585,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 711 2714 820 2772" lang="grc">
+        <span id="w_308_0" class="ocr_word" title="bbox 711 2714 820 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τῶν ἀν)</ins>
+            <ins class="alt" title="nlp 2.00">(τῶν</ins>
           </span>
         </span>
-        <span id="w_309" class="ocr_word" title="bbox 851 2712 1150 2772" lang="grc">
+        <span id="w_308_1" class="ocr_word" title="bbox 711 2714 820 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">θρώ|πων</ins>
+            <ins class="alt" title="nlp 2.00">ἀν)θρώ|πων</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1181 2711 1348 2769" lang="grc">
@@ -1618,11 +1623,6 @@
         <span id="w_315" class="ocr_word" title="bbox 1858 2746 1895 2755">
           <span class="alternatives">
             <ins title="nlp 2.00">. .</ins>
-          </span>
-        </span>
-        <span id="w_316" class="ocr_word" title="bbox 1980 2732 2014 2758">
-          <span class="alternatives">
-            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
       </span>
