--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0148.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0148.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 320 193 1428 240">
         <span id="w_0" class="ocr_word" title="bbox 320 195 382 240">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">,98</ins>
+            <ins title="nlp 2.00">98</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 948 194 1153 230">
@@ -764,7 +764,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 932 1443 1070 1495" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἀλλὰ</ins>
+            <ins title="nlp 2.00">ἀλλὰ</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1096 1456 1150 1494" lang="grc">
@@ -1176,7 +1176,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 566 2163 819 2222" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐξέβ) αλεν.</ins>
+            <ins title="nlp 2.00">ἐξέβ) αλεν.</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 893 2165 1126 2207" lang="grc">
@@ -1253,22 +1253,22 @@
         </span>
         <span id="w_241" class="ocr_word" title="bbox 1557 2266 1567 2276">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1587 2266 1597 2276">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 1618 2267 1626 2275">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 1648 2267 1655 2274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1684 2231 1690 2290">
@@ -1283,17 +1283,17 @@
         </span>
         <span id="w_247" class="ocr_word" title="bbox 1792 2266 1801 2275">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1823 2248 1843 2275" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ε</ins>
+            <ins title="nlp 2.00">ε</ins>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1863 2268 1870 2274">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1904 2232 2061 2275" lang="grc">
@@ -1310,7 +1310,7 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 435 2307 549 2366" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν)</ins>
+            <ins title="nlp 2.00">(τὸν)</ins>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 578 2309 583 2364">
@@ -1328,9 +1328,14 @@
             <ins class="alt" title="nlp 1.00">ἐξέ(λ)ειπεν.</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1078 2301 1290 2364" lang="grc">
+        <span id="w_256_0" class="ocr_word" title="bbox 1078 2301 1290 2364">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἔλε)|ξαν</ins>
+            <ins class="alt" title="nlp 2.00">(ἔλε)|ξαν</ins>
+          </span>
+        </span>
+        <span id="w_256_1" class="ocr_word" title="bbox 1078 2301 1290 2364">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_257" class="ocr_word" title="bbox 1328 2305 1380 2348" lang="grc">
@@ -1351,11 +1356,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1743 2302 1839 2361" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τ(ῆς</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1875 2303 2061 2362" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χώ)|ρας</ins>
           </span>
         </span>
       </span>
@@ -1397,17 +1397,17 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 1143 2410 1151 2420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1174 2410 1182 2420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1203 2410 1212 2420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
