--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0149.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0149.html
@@ -173,9 +173,14 @@
             <ins title="nlp 2.00">— —</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 687 509 998 570" lang="grc">
+        <span id="w_30_0" class="ocr_word" title="bbox 687 509 998 570">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀφανί)ζω(ν)</ins>
+            <ins class="alt" title="nlp 2.00">(ἀφανί)ζω(ν)</ins>
+          </span>
+        </span>
+        <span id="w_30_1" class="ocr_word" title="bbox 687 509 998 570">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1029 513 1079 556" lang="grc">
@@ -185,7 +190,7 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1111 510 1424 569" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δ)αιμόνιο(ν)</ins>
+            <ins title="nlp 2.00">(δ)αιμόνιο(ν)</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1457 511 1482 567" lang="grc">
@@ -201,11 +206,6 @@
         <span id="w_35" class="ocr_word" title="bbox 1710 509 1841 569" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὑπ)ὲρ</ins>
-          </span>
-        </span>
-        <span id="w_36" class="ocr_word" title="bbox 1875 527 1951 554" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοῦ</ins>
           </span>
         </span>
       </span>
@@ -386,9 +386,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_72" class="ocr_word" title="bbox 950 796 1151 855" lang="grc">
+        <span id="w_72_0" class="ocr_word" title="bbox 950 796 1151 855">
           <span class="alternatives">
-            <ins title="nlp 2.00">(σ)κέπας</ins>
+            <ins class="alt" title="nlp 2.00">(σ)κέπας</ins>
+          </span>
+        </span>
+        <span id="w_72_1" class="ocr_word" title="bbox 950 796 1151 855">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_73" class="ocr_word" title="bbox 1182 796 1207 854" lang="grc">
@@ -413,19 +418,19 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1731 794 1812 854" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_78" class="ocr_word" title="bbox 1842 795 1954 854" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Δ)ήμητρα</ins>
+            <ins title="nlp 2.00">(ὡς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 209 867 1164 927">
-        <span id="w_80" class="ocr_word" title="bbox 383 867 494 927" lang="grc">
+        <span id="w_80_0" class="ocr_word" title="bbox 383 867 494 927">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κ)αὶ</ins>
+            <ins class="alt" title="nlp 2.00">(κ)αὶ</ins>
+          </span>
+        </span>
+        <span id="w_80_1" class="ocr_word" title="bbox 383 867 494 927">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 525 867 795 927" lang="grc">
@@ -441,11 +446,6 @@
         <span id="w_83" class="ocr_word" title="bbox 929 868 1055 927" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺ(ς</ins>
-          </span>
-        </span>
-        <span id="w_84" class="ocr_word" title="bbox 1086 872 1164 912">
-          <span class="alternatives">
-            <ins title="nlp 2.00">etc.</ins>
           </span>
         </span>
       </span>
@@ -527,9 +527,14 @@
             <del title="nlp 0.90">eos</del>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 410 1012 567 1069">
+        <span id="w_99_0" class="ocr_word" title="bbox 410 1012 567 1069">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;dicit&amp;003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;dicit&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_99_1" class="ocr_word" title="bbox 410 1012 567 1069">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 598 1026 682 1057">
@@ -582,11 +587,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vitae</ins>
             <del title="nlp 0.90">vitae</del>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 1871 1011 1955 1055">
-          <span class="alternatives">
-            <ins title="nlp 2.00">cultum</ins>
           </span>
         </span>
       </span>
@@ -2118,7 +2118,7 @@
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1324 3117 1522 3154">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërtiano</ins>
+            <ins title="nlp 2.00">ërtiano</ins>
           </span>
         </span>
         <span id="w_400" class="ocr_word" title="bbox 1548 3129 1583 3152">
