--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0150.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0150.html
@@ -116,7 +116,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 823 469 957 511">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 985 468 1067 511">
@@ -490,19 +490,19 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_92" class="ocr_word" title="bbox 1351 966 1417 1020">
+        <span id="w_92_0" class="ocr_word" title="bbox 1351 966 1417 1020">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,εἰ</ins>
+            <ins class="alt" title="nlp 2.00">„εἰ</ins>
+          </span>
+        </span>
+        <span id="w_92_1" class="ocr_word" title="bbox 1351 966 1417 1020">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1461 964 1725 1008" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαλεκτικοὶ</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 1769 968 2063 1015" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνελθόντες</ins>
           </span>
         </span>
       </span>
@@ -809,9 +809,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 337 1461 2065 1519">
-        <span id="w_156" class="ocr_word" title="bbox 441 1462 524 1519" lang="grc">
+        <span id="w_156_0" class="ocr_word" title="bbox 441 1462 524 1519">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τε]</ins>
+            <ins class="alt" title="nlp 2.00">[τε]</ins>
+          </span>
+        </span>
+        <span id="w_156_1" class="ocr_word" title="bbox 441 1462 524 1519">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 552 1479 634 1518" lang="grc">
@@ -847,11 +852,6 @@
         <span id="w_163" class="ocr_word" title="bbox 1823 1478 1881 1513" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 1911 1461 2065 1516" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ᾤοντο,</ins>
           </span>
         </span>
       </span>
@@ -1725,9 +1725,14 @@
             <ins title="nlp 2.00">ὧδε·</ins>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 605 2742 791 2796" lang="grc">
+        <span id="w_339_0" class="ocr_word" title="bbox 605 2742 791 2796">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Ζήνων</ins>
+            <ins class="alt" title="nlp 2.00">„Ζήνων</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 605 2742 791 2796">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 816 2739 838 2782" lang="grc">
@@ -1758,11 +1763,6 @@
         <span id="w_345" class="ocr_word" title="bbox 1628 2738 1911 2793" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐλητρίδιον</ins>
-          </span>
-        </span>
-        <span id="w_346" class="ocr_word" title="bbox 1940 2752 2067 2791" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πριαμένου</ins>
           </span>
         </span>
       </span>
